# blue_internal

./: .gitmodules  README.md  process_data.sh
blue_benchmarking/: CMakeLists.txt  package.xml
blue_benchmarking/launch/: control_vis.launch  joint_control.launch  process_data.launch  record_benchmark.launch
blue_benchmarking/scripts/: analyze_benchmarking_data.py  chirp.py  chirp_publisher.py  consts.py  control_benchmarking.py  controller_visualization.py  execute_benchmarking.py  gripper_controller.py  motion_record.py  motion_replay.py  pose_return.py  record_positions.py  waypoint_benchmarking.py
blue_benchmarking/scripts/thermal_testing/: 10W_BaseMounted_CentrifugalFan5V.p  10W_BaseMounted_SlipRing_CentrifugalFan5V.p  10W_NoFan.p  21W_BaseMounted_SlipRing_CentrifugalFan5V.p  21W_Fan8V.p  21W_NoFan.p  54W.p  54W_Fan8V.p  54W_NoFan.p  60W_BaseMounted_CenterFlowAir_SlipRing_BigBlower12V.p  60W_BaseMounted_SlipRing_BigBlower12V.p  thermal_plotting.py  thermal_test.py
blue_benchmarking/scripts/torqueBandwidth/: bsTest1_6Nm.csv  chirp.py  fifthTest_5Nm.csv  firstTest  fourthTest_6Nm.csv  hysteresis01_8Nm.csv  hysteresis01_test2_8Nm.csv  hysteresis05_8Nm.csv  hysteresis05_test2_8Nm.csv  hysteresis05_test3_8Nm.csv  hysteresis05_test4_8Nm.csv  hysteresis10_test1_8Nm.csv  hysteresis1_test1_8Nm.csv  hysteresis_dvg_stiffened_15Nm.csv  secondTest.csv  thirdTest.csv
blue_benchmarking/src/: process_bag.cpp
blue_dbrt/: CMakeLists.txt  package.xml
blue_dbrt/config/: camera.yaml  fusion_tracker_cpu.yaml  fusion_tracker_gpu.yaml  visualization.rviz
blue_dbrt/launch/: blue_dbrt.launch  launch_example_cpu.launch  launch_example_gpu.launch
blue_dbrt/launch/launch_components/: fusion_tracker_cpu.launch  fusion_tracker_gpu.launch  play_bagfile.launch  setup.launch
blue_dexnet/: CMakeLists.txt  package.xml
blue_dexnet/launch/: dexnet.launch  display.launch  teleop_right.launch  viz.launch
blue_dexnet/meshes/: base_link.STL  camera_base_link.STL  primesense_camera.dae  primesense_link.STL  primesense_stack.dae
blue_dexnet/robots/: blue_dexnet.urdf.xacro  blue_mobile.urdf
blue_dexnet/scripts/: blue_ik.py  grasp.py
blue_dexnet/urdf/primesense/: primesense.urdf.xacro  primesense_mount.urdf.xacro
blue_dexnet/urdf/primesense_v0/: primesense.urdf.xacro
blue_gazebo/: CMakeLists.txt  urdf.rviz
blue_gazebo/config/: 6dof_control.yaml  7dof_control.yaml
blue_gazebo/launch/: _single_arm_gazebo.launch  ball_blue_world_sevendof.launch  blue_gazebo_sevendof.launch  blue_world.launch  blue_world_sevendof.launch  gazebo_6dof.launch  gazebo_controller_6dof.launch  gazebo_controller_7dof.launch  sixdof_blue_world.launch
blue_gazebo/robots/: 6dof_dyn2.urdf  blue_description_sevendof_kin.urdf  blue_description_sevendof_kin2.urdf
blue_internal/: CMakeLists.txt  package.xml
blue_kinematics/: CMakeLists.txt  package.xml
blue_kinematics/launch/: ik_vive.launch
blue_kinematics/src/: ik_vive_posture.cpp  pose_target.cpp  pose_target_posture.cpp
blue_manufacturing/blue_calibrate/: CMakeLists.txt  package.xml
blue_manufacturing/blue_calibrate/config/: base_control_parameters.yaml  base_parameters.yaml  link_control_parameters.yaml  link_parameters.yaml
blue_manufacturing/blue_calibrate/launch/: calibrate_base.launch  calibrate_link.launch
blue_manufacturing/blue_calibrate/scripts/: base_calibration_routine.py  duty_cycle.py  link_calibration_routine.py  meng_hand_durability.py  meng_link.py  pub.py
blue_manufacturing/blue_description_base/: CMakeLists.txt  package.xml  urdf.rviz
blue_manufacturing/blue_description_base/launch/: display.launch  gazebo.launch
blue_manufacturing/blue_description_base/robots/: blue_description_base.urdf
blue_manufacturing/blue_description_link/: CMakeLists.txt  package.xml
blue_manufacturing/blue_description_link/launch/: display.launch  gazebo.launch
blue_manufacturing/blue_description_link/robots/: blue_description_link.urdf
blue_manufacturing/blue_manufacturing/: CMakeLists.txt  package.xml
blue_misc/: CMakeLists.txt  package.xml
blue_misc/launch/: rviz.launch
blue_misc/scripts/: gravity_base_pub.py  gravity_viz.py  joint_position_benchmarking.py  link_temperature_monitor.py  record_accel.py  trajectory_follower.py
blue_misc/src/: visual_controller.cpp
blue_teleop/: CMakeLists.txt  package.xml
blue_teleop/launch/: teleop_full.launch  teleop_left.launch  teleop_right.launch
blue_teleop/launch/include/: teleop.launch.xml
blue_teleop/scripts/: 3d_mouse_teleop.py  blue_ik.py  vive_teleop.py
blue_teleop/src/: .teleop_inverse_kinematics.cpp.swp  ik.cpp  rviz_teleop.cpp  teleop_inverse_kinematics.cpp
blue_vive/: CMakeLists.txt  package.xml
blue_vive/launch/: teleop_full.launch  teleop_left.launch  teleop_right.launch
blue_vive/launch/include/: teleop.launch.xml
blue_vive/scripts/: single_arm_teleop.py  vive_teleop.py
blue_vive/src/: calibrate_joint_state.cpp  calibrate_joint_state.cpp.orig  calibrate_vive.cpp  ik_vive.cpp
blue_vive_tracking/: CMakeLists.txt  package.xml
blue_vive_tracking/launch/: track.launch
blue_vive_tracking/scripts/: vive_tracking.py
data_bench_08_25/: pos.txt
koko_gazebo/config/: 7dof_control.yaml
koko_gazebo/robots/: koko_description_sevendof_kin.urdf
koko_internal/: CMakeLists.txt  package.xml
koko_kinematics/: CMakeLists.txt
koko_kinematics/src/: 1  pose_target_posture.cpp
koko_manufacturing/koko_calibrate/config/: base_control_parameters.yaml  base_parameters.yaml  link_control_parameters.yaml  link_parameters.yaml
koko_manufacturing/koko_calibrate/launch/: calibrate_base.launch  calibrate_link.launch
koko_manufacturing/koko_description_base/: urdf.rviz
koko_misc/: CMakeLists.txt  package.xml
koko_misc/launch/: rviz.launch
koko_misc/scripts/: gravity_base_pub.py  joint_position_benchmarking.py  link_temperature_monitor.py  record_accel.py
koko_vive/: CMakeLists.txt  package.xml
koko_vive/scripts/: gripper_repub.py  single_arm_teleop.py  vive_teleop.py
koko_vive/src/: calibrate_joint_state.cpp  ik_vive.cpp
(+4 files in other folders)
