<?xml version="1.0"?>
<package>
  <name>blue_benchmarking</name>
  <version>0.0.0</version>
  <description>The blue_benchmarking package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zobot@todo.todo">zobot</maintainer>

  <license>BSD</license>

  <author email="pdowney@berkeley.edu">Phillip Downey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>blue_msgs</build_depend>
  <build_depend>blue_controllers</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>blue_msgs</run_depend>
  <run_depend>blue_controllers</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
