<?xml version="1.0"?>
<package>
  <name>koko</name>
  <version>0.0.0</version>
  <description>The koko internal metapackage contains internal tools for manufacturing and testing the Koko robot</description>

  <maintainer email="brentyi@berkeley.edu"></maintainer>

  <license>BSD</license>

  <author email="zhaoallan@berkeley.edu">Allan Zhao</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="lxd20@berkeley.edu">Lear Du</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="zoemccarthy12@gmail.com">Zoe McCarthy</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
